syntax = "proto3";

package selfchain.migration;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "selfchain/migration/params.proto";
import "selfchain/migration/token_migration.proto";
import "selfchain/migration/acl.proto";
import "selfchain/migration/migrator.proto";
import "selfchain/migration/config.proto";

option go_package = "selfchain/x/migration/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/selfchain/migration/params";
  
  }
  
  // Queries a list of TokenMigration items.
  rpc TokenMigration    (QueryGetTokenMigrationRequest) returns (QueryGetTokenMigrationResponse) {
    option (google.api.http).get = "/selfchain/migration/token_migration/{msgHash}";
  
  }
  rpc TokenMigrationAll (QueryAllTokenMigrationRequest) returns (QueryAllTokenMigrationResponse) {
    option (google.api.http).get = "/selfchain/migration/token_migration";
  
  }
  
  // Queries a Acl by index.
  rpc Acl (QueryGetAclRequest) returns (QueryGetAclResponse) {
    option (google.api.http).get = "/selfchain/migration/acl";
  
  }
  
  // Queries a list of Migrator items.
  rpc Migrator    (QueryGetMigratorRequest) returns (QueryGetMigratorResponse) {
    option (google.api.http).get = "/selfchain/migration/migrator/{migrator}";
  
  }
  rpc MigratorAll (QueryAllMigratorRequest) returns (QueryAllMigratorResponse) {
    option (google.api.http).get = "/selfchain/migration/migrator";
  
  }
  
  // Queries a Config by index.
  rpc Config (QueryGetConfigRequest) returns (QueryGetConfigResponse) {
    option (google.api.http).get = "/selfchain/migration/config";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTokenMigrationRequest {
  string msgHash = 1;
}

message QueryGetTokenMigrationResponse {
  TokenMigration tokenMigration = 1 [(gogoproto.nullable) = false];
}

message QueryAllTokenMigrationRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokenMigrationResponse {
  repeated TokenMigration                         tokenMigration = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination     = 2;
}

message QueryGetAclRequest {}

message QueryGetAclResponse {
  Acl Acl = 1 [(gogoproto.nullable) = false];
}

message QueryGetMigratorRequest {
  string migrator = 1;
}

message QueryGetMigratorResponse {
  Migrator migrator = 1 [(gogoproto.nullable) = false];
}

message QueryAllMigratorRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMigratorResponse {
  repeated Migrator                               migrator   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetConfigRequest {}

message QueryGetConfigResponse {
  Config Config = 1 [(gogoproto.nullable) = false];
}

